final layout icon and spacing corrected

--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   background-color: wheat;
 }
 
-
-
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -53,7 +51,7 @@ body {
 }
 
 .overlayInfo {
-  width: 80%;
+  width: 78%;
   height: 85%;
   position: absolute;
   top: 5%;
@@ -74,6 +72,7 @@ body {
   align-items: center;
   justify-content: space-between;
   background-color: #4d869cd2;
+  /* overflow: hidden; */
 }
 .top > h1 {
   margin-left: 478px;
@@ -82,17 +81,16 @@ body {
   text-transform: uppercase;
 }
 .top i {
-  font-size: 39px;
+  font-size: 42.5px;
   padding-right: 10px;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.9s;
   color: black;
   text-align: center;
-  padding-top: 15px;
-  margin-bottom: 4.5px;
+  padding: 4.26px;
 }
 .top i:hover {
-  background-color: red;  
-  color:white;
+  background-color: red;
+  color: white;
   cursor: pointer;
 }
 .description {
@@ -101,7 +99,8 @@ body {
 .description p {
   font-size: 16px;
   text-align: justify;
-  font-family: Poppins;
+  padding: 10px 0px;
+  font-family: "Nunito Sans", sans-serif;
 }
 a {
   background-color: rgba(220, 20, 60, 0.877);
@@ -114,7 +113,7 @@ a {
   font-weight: 700;
   letter-spacing: 3px;
   text-decoration: none;
-    animation: colorChange 1s infinite alternate;
+  animation: colorChange 1s infinite alternate;
 }
 a:hover {
   box-shadow: initial;
@@ -133,7 +132,7 @@ a:hover {
   position: absolute;
   top: 87.1%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -142,7 +141,7 @@ a:hover {
   position: absolute;
   top: 86.1%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -151,7 +150,7 @@ a:hover {
   position: absolute;
   top: 91.7%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -160,7 +159,7 @@ a:hover {
   position: absolute;
   top: 86.7%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -169,7 +168,7 @@ a:hover {
   position: absolute;
   top: 85%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -178,7 +177,7 @@ a:hover {
   position: absolute;
   top: 88%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -187,7 +186,7 @@ a:hover {
   position: absolute;
   top: 90.5%;
   margin-left: 30px;
-  color:maroon;
+  color: maroon;
   animation: anime 0.7s infinite alternate;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.7s;
 }
@@ -203,85 +202,71 @@ a:hover {
   0% {
     background-color: rgba(255, 0, 0, 0.77);
   }
-  50%
-  {
-    background-color:green;
+  50% {
+    background-color: green;
   }
   100% {
-    background-color:#4E31AA;
+    background-color: #4e31aa;
   }
 }
 
-
 /* Condenser */
-.condensor
-{
+.condensor {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
 }
-.leftCondenser
-{
+.leftCondenser {
   width: 70%;
   height: 100%;
 }
-.rightCondenser
-{
+.rightCondenser {
   width: 30%;
   height: 100%;
 }
 /* expansionValve */
-.expansionValve
-{
+.expansionValve {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
 }
-.leftExpansionValve
-{
-width: 70%;
-height: 100%;
+.leftExpansionValve {
+  width: 70%;
+  height: 100%;
 }
-.rightExpansionValve
-{
+.rightExpansionValve {
   width: 30%;
   height: 100%;
-
 }
 
 /* Ammeter */
-.Ammeter
-{
+.Ammeter {
   display: flex;
   width: 100%;
   height: 100%;
   align-items: center;
 }
-.leftAmmeter
-{
+.leftAmmeter {
   width: 70%;
   height: 100%;
-  
 }
-.rightAmmeter
-{
+.rightAmmeter {
   width: 30%;
   height: 100%;
 }
 /* Footer */
-footer
-{
+footer {
   margin-top: 10px;
   width: 1510px;
   height: 40px;
   background-color: black;
-border-top-right-radius: 10px;
-border-bottom-right-radius: 10px;
-color: rgba(255, 255, 255, 0.764);
-display: flex;
-align-items: center;
-justify-content: center;
-font-weight: 600;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  color: rgba(255, 255, 255, 0.764);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
 }
